# FEBioApp

./: .gitignore  CMakeLists.txt  FindDependencies.cmake  README.md
.github/workflows/: linux-pull-request.yml  linux-push.yml  macos-pull-request.yml  macos-push.yml  windows-pull-request.yml  windows-push.yml
Examples/: app_ex01.fex  app_ex02.fex  app_ex03.fex  app_ex04.fex  app_ex05.fex  app_ex06.fex  app_ex07.fex  app_ex08.fex  chair.stl  ex01.feb  ex02.feb  ex03.feb  ex04.feb  ex05.feb  ex06.feb  ex06_cc.feb  ex06_uc.feb  ex07_in.feb  ex08.feb  table.stl  tmp.feb
FEBioApp/: DataPlot.cpp  DataPlot.h  FEBioApp.cpp  FEBioApp.h  FEBioAppScript.cpp  FEBioAppUIBuilder.cpp  FEBioAppUIBuilder.h  FEBioAppWidget.cpp  FEBioAppWidget.h  GLCamera.cpp  GLCamera.h  GLFEBioScene.cpp  GLFEBioScene.h  GLMesh.cpp  GLMesh.h  Interpolator.cpp  Interpolator.h  Interpreter.cpp  Interpreter.h  JSParser.cpp  MyDialog.cpp  MyDialog.h  ParamInput.cpp  ParamInput.h  QGLView.cpp  QGLView.h  QPlotWidget.cpp  QPlotWidget.h  UIBuilder.cpp  UIBuilder.h  main.cpp  moc_MyDialog.cpp  moc_ParamInput.cpp  moc_PlotWidget.cpp  moc_QGLView.cpp  moc_QPlotWidget.cpp  stdafx.cpp
FEBioAppLib/: FEBioData.cpp  FEBioData.h  FEBioParam.cpp  FEBioParam.h  FEModelValuator.cpp  FEModelValuator.h  GLMesh.cpp  GLMesh.h  UIBuilder.cpp  UIBuilder.h  febioapp_api.h  moc_FEBioData.cpp
VS2010/: FEBioApp.sln  FEBioApp.vcxproj  FEBioApp.vcxproj.filters
VS2013/: FEBioApp.sln  FEBioApp.vcxproj  FEBioApp.vcxproj.filters  ReadMe.txt
VS2015/: FEBioApp.sln
VS2015/FEBioApp/: FEBioApp.vcxproj
VS2017/: FEBioApp.sln
VS2017/FEBioApp/: FEBioApp.vcxproj  FEBioApp.vcxproj.filters
VS2017/FEBioAppLib/: FEBioAppLib.vcxproj  FEBioAppLib.vcxproj.filters
ci/Linux/: build.sh  cmake.sh  publish-to-s3.sh
ci/Windows/: build.bat  publish-to-s3.sh
ci/macOS/: build.sh  cmake.sh  scp-to-repo.sh
doc/: mkdocs.yml
doc/docs/: getting-started.md  index.md  reference.md  script.md  todo.md
